feat: more work on cyber colectivist

--- a/localisation/english/replace/zz_evolved_ethics_authorities_l_english.yml
+++ b/localisation/english/replace/zz_evolved_ethics_authorities_l_english.yml
@@ -116,9 +116,9 @@
 	auth_cyber_tec_patrocorporate_individualist_tt: "['concept_tec_monument_buildings'] provide additional ['concept_tec_ruler_job_tec_cyber_idol_plural_icon'] Jobs, scaling with §Y$tec_loc_planet_ascensions$§!\n$unlock_edict_tt$ ['concept_tec_edict_tec_idolware_initiative']"
 
 
-	auth_cyber_tec_patrocorporate_collectivist: "Patrimonial Corporate Cyberhouseholds"
-	auth_cyber_tec_patrocorporate_collectivist_desc: "The ruling family has restructured society into a network of cybernetically-linked "houses," each aspiring to emulate the success of the central dynasty.\n\nThis system promotes fierce loyalty and competition, with the promise that any household could rise to prominence through dedication to the corporation. This divide-and-conquer strategy effectively redirects ambition and discontent away from the core dynasty, ensuring their continued dominance in the corporate hierarchy."
-	auth_cyber_tec_patrocorporate_collectivist_tt: "$unlock_edict_tt$ ['concept_tec_edict_tec_idle_mind_networking']"
+	auth_cyber_tec_patrocorporate_collectivist: "Patrimonial Corporate Gamification"
+	auth_cyber_tec_patrocorporate_collectivist_desc: "The ruling family has revolutionized their corporate empire by transforming it into a vast, gamified reality. Through cybernetic implants, every citizen-employee's life is quantified into experience points, levels, and achievements. The family sets broad quests and milestones that drive productivity and innovation.\n\nEmployees compete for prestigious titles, their reality filled with progress bars, daily quests, and rare loot drops in the form of bonuses or promotions.\n\nEveryone strives to "level up" in their designated roles, while the ruling family reaps the benefits of this hyper-engaged workforce and customer base."
+	auth_cyber_tec_patrocorporate_collectivist_tt: "All leaders get the ['trait:leader_trait_tec_cyborg_gamification_cortex'] Trait \n$unlock_edict_tt$ ['concept_tec_edict_tec_gamified_ascendance']"
 
 	auth_tec_ai:0 "AI Administration"
 	auth_tec_ai_desc:0 "This society is not directly governed by a corp of politics, but a continuously evolving and efficient Artificial Intelligence, composed by a sophisticated computing network, controlling most of the aspect of it; Several bureaucrats and technocrats are assigned based on performance rate to suit the main roles on sub-administrative systems, always constantly surveyed by the core processor."
