--- a/localisation/english/replace/zz_evolved_traits_l_english.yml
+++ b/localisation/english/replace/zz_evolved_traits_l_english.yml
@@ -1422,9 +1422,6 @@
 	trait_tec_cyborg_deck_amenities:0 "Fabrication Database"
 	trait_tec_cyborg_deck_amenities_desc:0 "§LThis repository provide the mechanical knowledge necessary for better operation of industrial production.§!"
 	trait_tec_cyborg_deck_amenities_effect:0 "§YTODO ASCENSION§!"
-
-	trait_tec_cyborg_idol_implants: "Idolware Implants"
-	trait_tec_cyborg_idol_implants_desc: "Cybernetic enhancements modeled after those of the Cyber-Idols. These augments boost cultural engagement, while also driving increased consumption and a desire for social influence."
 # /
 
 # ------------------------------------------------- BIONICS
@@ -1850,13 +1847,13 @@
 	leader_trait_tec_prodigy_movement:0 "Prodigy: Starseeker"
 	leader_trait_tec_prodigy_movement_desc:0 "§LThis Leader has developed special skills from a young age, understanding how certain reactors and thrusters works and applying that knowledge for fleet movement.§!"
 
-	leader_trait_tec_prodigy_emulators:0 "Prodigy: Simulator knowledge"
+	leader_trait_tec_prodigy_emulators:0 "Prodigy: Simulator Knowledge"
 	leader_trait_tec_prodigy_emulators_desc:0 "§LThis Leader has developed special skills from a young age, playing grand strategy 8k holo-games, applying unusual tactics and real-time-strategy knowledge to its tasks.§!"
 
 	leader_trait_tec_prodigy_tactical:0 "Prodigy: Tactical Brotherhood"
 	leader_trait_tec_prodigy_tactical_desc:0 "This Leader has developed special skills from a young age, growing and training with his brethren as equals, achieving a greater degree of coordination and sympathy.§!"
 
-	leader_trait_tec_prodigy_arts:0 "Prodigy: Artistic sensitivity"
+	leader_trait_tec_prodigy_arts:0 "Prodigy: Artistic Sensitivity"
 	leader_trait_tec_prodigy_arts_desc:0 "§LThis Leader has developed special skills from a young age, creating a deep bond with arts and culture, greatly valuing and improving social development.§!"
 
 	leader_trait_tec_prodigy_research:0 "Prodigy: Academic Genius"
@@ -1868,19 +1865,19 @@
 	leader_trait_tec_prodigy_industry:0 "Prodigy: Industrial Engineer"
 	leader_trait_tec_prodigy_industry_desc:0 "§LThis Leader has developed special skills from a young age, being a eminence in the matter of production and design of any good.§!"
 
-	leader_trait_tec_prodigy_unity:0 "Prodigy: Sense of unity"
+	leader_trait_tec_prodigy_unity:0 "Prodigy: Sense of Unity"
 	leader_trait_tec_prodigy_unity_desc:0 "§LThis Ruler has developed special skills from a young age, taking in mind his example as a way to ensure others will be able to follow.§!"
 
 	leader_trait_tec_prodigy_solidarity:0 "Prodigy: Solidarity"
 	leader_trait_tec_prodigy_solidarity_desc:0 "§LThis Ruler has developed special skills from a young age, taking in mind a generous distribution of resources will greatly boost the productivity.§!"
 
-	leader_trait_tec_prodigy_political:0 "Prodigy: Political dexterity"
+	leader_trait_tec_prodigy_political:0 "Prodigy: Political Dexterity"
 	leader_trait_tec_prodigy_political_desc:0 "§LThis Ruler has developed special skills from a young age, being a cunning individual able to convince near anyone with a extreme versatile and rich discourse.§!"
 
-	leader_trait_tec_prodigy_detail:0 "Prodigy: Attention to detail"
+	leader_trait_tec_prodigy_detail:0 "Prodigy: Attention to Detail"
 	leader_trait_tec_prodigy_detail_desc:0 "§LThis Leader has developed special skills from a young age, being meticulous and giving extreme attention to details.§!"
 
-	leader_trait_tec_prodigy_genius:0 "Prodigy: Unleashed geniality"
+	leader_trait_tec_prodigy_genius:0 "Prodigy: Unleashed Geniality"
 	leader_trait_tec_prodigy_genius_desc:0 "§LThis Scientist has developed special skills from a young age, having a very distinctive way of operating, both in genius and maniacal ways.§!"
 
  # --------------- Hive Cerebrates
@@ -2418,3 +2415,107 @@ trait_ruler_champion_of_the_people_hive:0 "Protector of the Single-Minded"
 trait_ruler_champion_of_the_people_hive_desc: "$trait_ruler_champion_of_the_people_desc$"
 trait_ruler_champion_of_the_people_machine:0 "Warden of the Individual"
 trait_ruler_champion_of_the_people_machine_desc: "$trait_ruler_champion_of_the_people_desc$"
+
+
+leader_trait_tec_cyborg_gamification_cortex: "Gamification Cortex"
+leader_trait_tec_cyborg_gamification_cortex_desc: "Advanced neural implants that quantify all aspects of work and life into a complex system of points, levels, and achievements. Leaders with this trait excel at motivating others through artificial rewards and progress indicators, significantly boosting productivity and satisfaction among their subordinates."
+
+
+leader_trait_tec_cyborg_gamification_cortex_xp_tooltip: "§ETrait Status§!:\n$t$Current §ETier§!: [this.tec_gamification_cortex_tier]\n$t$Current §EEXP§!: [this.tec_gamification_cortex_xp]/100"
+leader_trait_tec_cyborg_gamification_cortex_ruler_tooltip: "\n§EThis §Y$tec_loc_leader$§! gets experience for this §YTrait§! by§!:\n$t$Making §YDiplomatic Deals§!\n$t$Winning §YWars§!\n\n$leader_trait_tec_cyborg_gamification_cortex_xp_tooltip$"
+
+leader_trait_tec_cyborg_gamification_cortex_official_tooltip: "\n§EThis §Y$tec_loc_leader$§! gets experience for this §YTrait§! by§!:\n$t$$tec_loc_councilor$ - Reforming §YGovernment§!, §YPolicies§! and enacting §YAgendas§!\n$t$$tec_loc_governor$ - Building §YPlanetary Infrastructure§! or completing §YPlanetary Projects§!\n$t$$tec_loc_diplomat$ - Enacting §YFederation Laws§!, proposing §Y$galactic_community$ Resolutions§! and getting them approved\n\n$leader_trait_tec_cyborg_gamification_cortex_xp_tooltip$"
+
+leader_trait_tec_cyborg_gamification_cortex_scientitst_tooltip: "\n§EThis §Y$tec_loc_leader$§! gets experience for this §YTrait§! by§!:\n$t$$tec_loc_councilor$ - Reforming §YGovernment§!, §YPolicies§! and enacting §YAgendas§!\n$t$$tec_loc_governor$ - Building §YPlanetary Infrastructure§! or completing §YPlanetary Projects§!\n$t$$tec_loc_scientist$ - Researching §YAnomalies§!, §YDig Sites§! and §YAstral Rifts§!\n\n$leader_trait_tec_cyborg_gamification_cortex_xp_tooltip$"
+
+leader_trait_tec_cyborg_gamification_cortex_commander_tooltip: "\n§EThis §Y$tec_loc_leader$§! gets experience for this §YTrait§! by§!:\n$t$$tec_loc_councilor$ - Reforming §YGovernment§!, §YPolicies§! and enacting §YAgendas§!\n$t$$tec_loc_governor$ - Building §YPlanetary Infrastructure§! or completing §YPlanetary Projects§!\n$t$$tec_loc_admiral$ - Winning §YSpace Battles§!\n$t$$tec_loc_general$ - Winning §YPlanetary Fights§!\n\n$leader_trait_tec_cyborg_gamification_cortex_xp_tooltip$"
+
+leader_trait_tec_cyborg_gamification_cortex_ruler_influence: "Title: §YSovereign of Spheres§!"
+leader_trait_tec_cyborg_gamification_cortex_ruler_exceptional: "Title: §YExceptional Sage§!"
+leader_trait_tec_cyborg_gamification_cortex_ruler_effective: "Title: §YApex Coordinator§!"
+leader_trait_tec_cyborg_gamification_cortex_ruler_face: "Title: §YCharmer of Xenos§!"
+leader_trait_tec_cyborg_gamification_cortex_ruler_enigma: "Title: §YEnigma Futurist§!"
+leader_trait_tec_cyborg_gamification_cortex_ruler_cooperator: "Title: §YColaborative Sycophant§!"
+leader_trait_tec_cyborg_gamification_cortex_ruler_ascension: "Title: §YAscendant Optimizer§!"
+leader_trait_tec_cyborg_gamification_cortex_ruler_tactical: "Title: §YTactical Transcendent§!"
+leader_trait_tec_cyborg_gamification_cortex_ruler_defensive: "Title: §YStalwart Defender§!"
+
+
+leader_trait_tec_cyborg_gamification_cortex_councilor_edict: "Title: §YMandate Magnifier§!"
+leader_trait_tec_cyborg_gamification_cortex_councilor_agenda: "Title: §YEfficient Executor§!"
+leader_trait_tec_cyborg_gamification_cortex_councilor_agenda_2: "Title: §YLong-term Architect§!"
+leader_trait_tec_cyborg_gamification_cortex_councilor_faction: "Title: §YParty Paragon§!"
+leader_trait_tec_cyborg_gamification_cortex_councilor_trade: "Title: §YCommerce Sovereign§!"
+leader_trait_tec_cyborg_gamification_cortex_councilor_mega: "Title: §YCosmic Constructor§!"
+leader_trait_tec_cyborg_gamification_cortex_councilor_void: "Title: §YVoid Harvester§!"
+leader_trait_tec_cyborg_gamification_cortex_councilor_diplo: "Title: §YInfluential Diplomat§!"
+leader_trait_tec_cyborg_gamification_cortex_councilor_encryption: "Title: §YMaster Cryptographer§!"
+leader_trait_tec_cyborg_gamification_cortex_councilor_decryption: "Title: §YTuring Maestro§!"
+leader_trait_tec_cyborg_gamification_cortex_councilor_research: "Title: §YGenial Innovator§!"
+leader_trait_tec_cyborg_gamification_cortex_councilor_orbital: "Title: §YOrbital Inspector§!"
+leader_trait_tec_cyborg_gamification_cortex_councilor_ancient: "Title: §YArchaeo-Fanatic§!"
+leader_trait_tec_cyborg_gamification_cortex_councilor_educator: "Title: §YSage Educator§!"
+leader_trait_tec_cyborg_gamification_cortex_councilor_platform: "Title: §YMaginot Protector§!"
+leader_trait_tec_cyborg_gamification_cortex_councilor_logisticts: "Title: §YLightning Logistician§!"
+leader_trait_tec_cyborg_gamification_cortex_councilor_ship: "Title: §YNaval Firebrand§!"
+leader_trait_tec_cyborg_gamification_cortex_councilor_army: "Title: §YGrandious Veteran§!"
+
+
+leader_trait_tec_cyborg_gamification_cortex_diplomat_commerce: "Title: §YCommerce Advocate§!"
+leader_trait_tec_cyborg_gamification_cortex_diplomat_good: "Title: §YAdvocate of the People§!"
+leader_trait_tec_cyborg_gamification_cortex_diplomat_industry: "Title: §YIndustry Pusher§!"
+leader_trait_tec_cyborg_gamification_cortex_diplomat_ecologist: "Title: §YEcology Activist§!"
+leader_trait_tec_cyborg_gamification_cortex_diplomat_divinity: "Title: §YDivine Presence§!"
+leader_trait_tec_cyborg_gamification_cortex_diplomat_studies: "Title: §YAstral Patron§!"
+leader_trait_tec_cyborg_gamification_cortex_diplomat_defense: "Title: §YMilitary Visionary§!"
+leader_trait_tec_cyborg_gamification_cortex_diplomat_arbiter: "Title: §YArbiter of War§!"
+leader_trait_tec_cyborg_gamification_cortex_diplomat_mercenary: "Title: §YPrivatization Magnate§!"
+leader_trait_tec_cyborg_gamification_cortex_diplomat_reformer: "Title: §YGalactic Reformer§!"
+leader_trait_tec_cyborg_gamification_cortex_diplomat_opposer: "Title: §YPrincipled Opposer§!"
+leader_trait_tec_cyborg_gamification_cortex_diplomat_supporter: "Title: §YAchieved Supporter§!"
+
+
+leader_trait_tec_cyborg_gamification_cortex_diplomat_naval: "Title: §YFederated Naval Advocate§!"
+leader_trait_tec_cyborg_gamification_cortex_diplomat_naval_2: "Title: §YFleet Bolsterer§!"
+leader_trait_tec_cyborg_gamification_cortex_diplomat_naval_3: "Title: §YEfficient Contributor§!"
+leader_trait_tec_cyborg_gamification_cortex_diplomat_cohesion: "Title: §YCompromise Maker§!"
+leader_trait_tec_cyborg_gamification_cortex_diplomat_exp: "Title: §YExperience Comrade§!"
+leader_trait_tec_cyborg_gamification_cortex_diplomat_fed_diplo: "Title: §YFederation Lobbyist§!"
+leader_trait_tec_cyborg_gamification_cortex_diplomat_fed_research: "Title: §YCooperation Architect§!"
+
+
+leader_trait_tec_cyborg_gamification_cortex_governor_build: "Title: §YExpedite Constructor§!"
+leader_trait_tec_cyborg_gamification_cortex_governor_stable: "Title: §YStabilizing Influencer§!"
+leader_trait_tec_cyborg_gamification_cortex_governor_crime: "Title: §YParagon of Law§!"
+leader_trait_tec_cyborg_gamification_cortex_governor_slave: "Title: §YMaster Slaver§!"
+leader_trait_tec_cyborg_gamification_cortex_governor_worker: "Title: §YUnion Guide§!"
+leader_trait_tec_cyborg_gamification_cortex_governor_ruler: "Title: §YExpert Lobbyist§!"
+leader_trait_tec_cyborg_gamification_cortex_governor_farmer: "Title: §YField Genius§!"
+leader_trait_tec_cyborg_gamification_cortex_governor_miner: "Title: §YMineral Investigator§!"
+leader_trait_tec_cyborg_gamification_cortex_governor_technician: "Title: §YPower Speculator§!"
+leader_trait_tec_cyborg_gamification_cortex_governor_soldier: "Title: §YMilitant Sage§!"
+leader_trait_tec_cyborg_gamification_cortex_governor_researcher: "Title: §YStudy Magnificent§!"
+leader_trait_tec_cyborg_gamification_cortex_governor_industry_alloy: "Title: §YMetal Speaker§!"
+leader_trait_tec_cyborg_gamification_cortex_governor_industry_cg: "Title: §YConsummate Efficiency§!"
+leader_trait_tec_cyborg_gamification_cortex_governor_unity: "Title: §YGrand Bureaucrat§!"
+leader_trait_tec_cyborg_gamification_cortex_governor_trade: "Title: §YCommerce Guru§!"
+
+
+leader_trait_tec_cyborg_gamification_cortex_scientist_anomaly: "Title: §YAnomalous Prospector§!"
+leader_trait_tec_cyborg_gamification_cortex_scientist_anomaly_2: "Title: §YInterest Inspector§!"
+leader_trait_tec_cyborg_gamification_cortex_scientist_survey: "Title: §YHasty Surveyor§!"
+leader_trait_tec_cyborg_gamification_cortex_scientist_dig: "Title: §YRefined Archeologist§!"
+leader_trait_tec_cyborg_gamification_cortex_scientist_dig_2: "Title: §YArchaic Sage§!"
+leader_trait_tec_cyborg_gamification_cortex_scientist_astral: "Title: §YAstral Chosen§!"
+leader_trait_tec_cyborg_gamification_cortex_scientist_cloaking: "Title: §YHidden Maestro§!"
+leader_trait_tec_cyborg_gamification_cortex_scientist_sensors: "Title: §YFarsight Minstrel§!"
+
+
+leader_trait_tec_cyborg_gamification_cortex_comander_army: "Title: §YFierce Commander§!"
+leader_trait_tec_cyborg_gamification_cortex_comander_army_2: "Title: §YBulwark of Command§!"
+leader_trait_tec_cyborg_gamification_cortex_comander_width: "Title: §YHorizon Expander§!"
+leader_trait_tec_cyborg_gamification_cortex_comander_evasive: "Title: §YEvasive Trickster§!"
+leader_trait_tec_cyborg_gamification_cortex_comander_accurate: "Title: §YPin-point Shooter§!"
+leader_trait_tec_cyborg_gamification_cortex_comander_tracker: "Title: §YGalactic Stalker§!"
+leader_trait_tec_cyborg_gamification_cortex_comander_sniper: "Title: §YRenowned Eye-baller§!"
+leader_trait_tec_cyborg_gamification_cortex_comander_fleet: "Title: §YBastion of Multitasking§!"
