--- a/localisation/english/zz_evolved_cui_l_english.yml
+++ b/localisation/english/zz_evolved_cui_l_english.yml
@@ -257,6 +257,11 @@
 	tec_loc_ruler: "£ruler£ Ruler"
 	tec_loc_ruler_plural: "£ruler£ Rulers"
 	tec_loc_councilor: "£council£ Councilor"
+	tec_loc_governor: "£planet£ Governor"
+	tec_loc_diplomat: "£diplo_weight£ Diplomat"
+	tec_loc_scientist: "£research£ Scientist"
+	tec_loc_admiral: "£mod_owned_ship_fire_rate_mult£ Admiral"
+	tec_loc_general: "£army_power£ General"
 	tec_loc_councilor_plural: "£council£ Councilors"
 	tec_loc_council_members: "£council£ Council Members"
 	tec_loc_idle_leader: "£unemployment£ Idle Leader"
