--- a/localisation/english/zz_evolved_cults_l_english.yml
+++ b/localisation/english/zz_evolved_cults_l_english.yml
@@ -17,9 +17,9 @@
  tec_cui_cult_header_advanced_group: "Advanced Tenets"
  tec_cui_cult_header_authority_group: "Authority Tenets"
  tec_cui_cult_title_activate_cult: "Activate Tenet?"
- tec_cui_cult_title_activate_cult_desc: "Are you sure you want to activate the §Y['tradition:[from.tec_cult_in_queue]']§! Tenet?"
+ tec_cui_cult_title_activate_cult_desc: "Are you sure you want to activate the ['tradition:[from.tec_cult_in_queue_key]', [tec_cult_in_queue_name]] Tenet?"
  tec_cui_cult_title_deactivate_cult: "Deactivate Tenet?"
- tec_cui_cult_title_deactivate_cult_desc: "Are you sure you want to deactivate the §Y['tradition:[from.tec_cult_in_queue]']§! Tenet?"
+ tec_cui_cult_title_deactivate_cult_desc: "Are you sure you want to deactivate the ['tradition:[from.tec_cult_in_queue_key]', [tec_cult_in_queue_name]] Tenet?"
  tec_cui_cult_invalid: "Invalid"
  tec_cui_has_no_authority_swap_no: "£trigger_no£ Has no Advanced Authority Swaps"
  tec_cui_has_no_authority_swap_yes: "£trigger_yes£ Has no Advanced Authority Swaps"
@@ -95,9 +95,9 @@
  tec_cult_tec_tenet_selective_xenophilia_desc: "$tec_cui_cult_tag_basic_tenet$\nNot all aliens are created equal. We recognize the value in select xeno species, cultivating beneficial relationships while maintaining our cultural identity."
  tec_cult_tec_tenet_selective_xenophilia_effect: "Allow §G2§! §YXeno Species§! to acquire ['concept_tec_right_option_citizenship_full_alias_icon']\n\nNo ['ethic:ethic_xenophile'] Attraction from these §YXeno Species§!\n\nIncreased §Y$tec_loc_opinion$§! with empires whose Species you granted §YFull Citizenship§!"
 
- tec_cult_tec_tenet_strategic_readness_initiaitive: "Military Readiness"
- tec_cult_tec_tenet_strategic_readness_initiaitive_desc: "$tec_cui_cult_tag_basic_tenet$ ($tec_cui_cult_tag_transitory_tenet$)\nIn an increasingly dangerous galaxy, our civilization recognizes the need for enhanced military preparedness, balancing defensive capabilities with societal progress."
- tec_cult_tec_tenet_strategic_readness_initiaitive_effect: "£job_soldier£ $job_soldier_plural$ Political Power: §Y+0.50§!\n\nCan use ['concept_tec_policy_option_no_retreat_doctrine_alias_icon'] Policy Option\n\nCan use ['concept_tec_edict_tec_doing_your_part_alias_icon'] Edict\n\nEmbracing any ['ethic:ethic_militarist'] Faction costs no §Y$tec_loc_unity$§!"
+ tec_cult_tec_tenet_strategic_readiness_initiaitive: "Military Readiness"
+ tec_cult_tec_tenet_strategic_readiness_initiaitive_desc: "$tec_cui_cult_tag_basic_tenet$ ($tec_cui_cult_tag_transitory_tenet$)\nIn an increasingly dangerous galaxy, our civilization recognizes the need for enhanced military preparedness, balancing defensive capabilities with societal progress."
+ tec_cult_tec_tenet_strategic_readiness_initiaitive_effect: "£job_soldier£ $job_soldier_plural$ Political Power: §Y+0.50§!\n\nCan use ['concept_tec_policy_option_no_retreat_doctrine_alias_icon'] Policy Option\n\nCan use ['concept_tec_edict_tec_doing_your_part_alias_icon'] Edict\n\nEmbracing any ['ethic:ethic_militarist'] Faction costs no §Y$tec_loc_unity$§!"
 
  tec_cult_tec_tenet_deescalation_doctrine: "De-escalation Doctrine"
  tec_cult_tec_tenet_deescalation_doctrine_desc: "$tec_cui_cult_tag_basic_tenet$ ($tec_cui_cult_tag_transitory_tenet$)\nOur society embraces a defensive posture, prioritizing the protection of our people through diplomatic means and measured responses. We seek to defuse conflicts before they escalate."
@@ -126,14 +126,14 @@
  tec_cult_tec_tenet_cyber_creed: "[from.tec_cyber_creed_authority_name]"
  tec_cult_tec_tenet_cyber_creed_desc: "$tec_cui_cult_tag_authority_tenet$\n[from.tec_cyber_creed_authority_desc]"
  tec_cult_tec_tenet_cyber_creed_effect: "Replaces ['authority:[tec_authority_key]:[tec_authority_key]'] with ['authority:[tec_authority_key]:[tec_cyber_creed_authority_key]'] Advanced Authority"
- tec_cult_tec_tenet_cyber_creed_requirement: "£trigger_no£ Requires finishing the §Y$tec_loc_situation_icon$ $situation_cybernetic_creed_cyberization$§! Situation"
+ tec_cult_tec_tenet_cyber_creed_requirement: "Requires finishing the §Y$tec_loc_situation_icon$ $situation_cybernetic_creed_cyberization$§! Situation"
 
  tec_cult_tec_tenet_cyber_individualist: "[from.tec_cyber_individualist_name]"
  tec_cult_tec_tenet_cyber_individualist_desc: "$tec_cui_cult_tag_authority_tenet$\n[from.tec_cyber_individualist_desc]"
  tec_cult_tec_tenet_cyber_individualist_effect: "Replaces ['authority:[tec_authority_key]:[tec_authority_key]'] with ['authority:[tec_authority_key]:[tec_cyber_individualist_key]'] Advanced Authority"
- tec_cult_tec_tenet_cyber_individualist_requirement: "£trigger_no£ Requires finishing the §Y$tec_loc_situation_icon$ $futureshock_chain_title$§! Event Chain Finished with a §YIndividualist§! ending"
+ tec_cult_tec_tenet_cyber_individualist_requirement: "Requires finishing the §Y$tec_loc_situation_icon$ $futureshock_chain_title$§! Event Chain Finished with a §YIndividualist§! ending"
 
  tec_cult_tec_tenet_cyber_collectivist: "[from.tec_cyber_collectivist_name]"
  tec_cult_tec_tenet_cyber_collectivist_desc: "$tec_cui_cult_tag_authority_tenet$\n[from.tec_cyber_collectivist_desc]"
  tec_cult_tec_tenet_cyber_collectivist_effect: "Replaces ['authority:[tec_authority_key]:[tec_authority_key]'] with ['authority:[tec_authority_key]:[tec_cyber_collectivist_key]'] Advanced Authority"
- tec_cult_tec_tenet_cyber_collectivist_requirement: "£trigger_no£ Requires finishing the §Y$tec_loc_situation_icon$ $futureshock_chain_title$§! Event Chain Finished with a §YCollectivist§! ending "
+ tec_cult_tec_tenet_cyber_collectivist_requirement: "Requires finishing the §Y$tec_loc_situation_icon$ $futureshock_chain_title$§! Event Chain Finished with a §YCollectivist§! ending"
