--- a/localisation/english/zz_evolved_edict_policies_l_english.yml
+++ b/localisation/english/zz_evolved_edict_policies_l_english.yml
@@ -1575,4 +1575,8 @@ edict_tec_idle_mind_networking_desc: "Implement a program to "repurpose" the cog
 
 edict_tec_idolware_initiative: "Idolware Initiative"
 edict_tec_idolware_initiative_desc: "Launch a massive marketing campaign promoting our Cyber-Idols' signature augmentations. This initiative will gradually outfit our population with idol-grade cybernetics, reshaping our society in the image of our corporate dynasty."
-edict_tec_idolware_initiative_tt: "$tec_loc_pops$ working ['concept_tec_ruler_job_tec_cyber_idol_icon'] Jobs get the ['trait:trait_tec_cyborg_idol_implants'] Trait\nOther §Y$tec_loc_pops$§! will slowly acquire this Trait too"
+edict_tec_idolware_initiative_tt: "$tec_loc_pops$ working ['concept_tec_ruler_job_tec_cyber_idol_icon'] Jobs get the §Y$tec_cyborg_idol_implants_pop$§! Modifier\nOther §Y$tec_loc_pops$§! will slowly acquire this Modifier too\n§Y$tec_cyborg_idol_implants_pop$§! Modifier:\n$t$- $mod_tec_pop_lifestyle_trade_value_add$: §G+1§!\n$t$- $mod_pop_job_trade_mult$: §G+10%§!\n$t$- $mod_planet_jobs_unity_produces_mult$: §G+10%§!\n$t$- $mod_pop_category_normal_resources_consumer_goods_upkeep_add$: §R+0.25§!\n$t$- $MOD_POP_GOVERNMENT_ETHIC_ATTRACTION$: §Y+100%§!\n\n"
+
+ edict_tec_gamified_ascendance: "Gamified Ascendance"
+ edict_tec_gamified_ascendance_desc: ""
+ edict_tec_gamified_ascendance_tt: "EXP gain on ['trait:leader_trait_tec_cyborg_gamification_cortex']: §G+50%§!"
