--- a/localisation/english/zz_evolved_modifiers_l_english.yml
+++ b/localisation/english/zz_evolved_modifiers_l_english.yml
@@ -464,6 +464,9 @@
 
 	tec_demote_me_senpai:0 "Pop demotion modifier"
 	tec_demote_me_senpai_desc:0 "Made so pops demote rapidly"
+
+    tec_cyborg_idol_implants_pop: "Idolware Implants"
+    tec_cyborg_idol_implants_pop_desc: "Cybernetic enhancements modeled after those of the Cyber-Idols. These augments boost cultural engagement, while also driving increased consumption and a desire for social influence."
  # /
 
  # Country Modifiers
