feat: finished cyber governments... finally

--- a/localisation/english/replace/zz_evolved_replace_l_english.yml
+++ b/localisation/english/replace/zz_evolved_replace_l_english.yml
@@ -405,3 +405,15 @@ tec_cyber.4.desc.neutral: "The introduction of cybernetic implants has smoothly 
 tec_cyber.4.a: "Personalized Offers, for your capabilities!"
 tec_cyber.4.b: "The Neuralnet pays by the moment spared, sign up now!"
 tec_cyber.4.c: "$cyber_keep_auth_option$"
+
+
+tec_cyber.25.name: "Trends and Mechanisms"
+tec_cyber.25.desc.individualist: "The ruling family has fully embraced cybernetic enhancements, transforming themselves into visionary leaders and trendsetters. Their cutting-edge implants and augmentations have become the height of fashion and aspiration throughout the realm. Citizens eagerly emulate the family's cybernetic upgrades, driving a surge of innovation and growth for the corporate laboratories."
+
+tec_cyber.25.desc.collectivist: "The corporate overlords have revolutionized its operations by implementing a vast, gamified reality powered by cybernetic implants. Every citizen is now an integral part of this interactive system, their lives quantified into experience points, levels, and achievements. Employees compete passionately for prestigious titles, their reality filled with progress bars, daily quests, and rare rewards. The ruling family oversees this technocratic meritocracy, reaping the benefits of their hyper-engaged populace."
+
+tec_cyber.25.desc.neutral: "While there has been a selective integration of cybernetic technologies into the operations of the corporate empire, this has enhanced the capabilities of management and executive teams, but the impact on the general populace has been more gradual. The corporation maintains a careful balance between technological innovation and preserving established corporate structures and traditions."
+
+tec_cyber.25.a: "The Family's Vision, now realized in Steel and Circuits."
+tec_cyber.25.b: "Level Up, earn your titles today!"
+tec_cyber.25.c: "$cyber_keep_auth_option$"
