--- a/localisation/english/replace/zz_evolved_traits_l_english.yml
+++ b/localisation/english/replace/zz_evolved_traits_l_english.yml
@@ -73,8 +73,8 @@
 	trait_tec_bioservant_incompetent:0 "Bio-Incompetent"
 	trait_tec_bioservant_incompetent_desc:0 "§LSeems hard to imagine how a species was designed to be such inneficent, with a big degree of completely messy behaviour and capabilities, but...§!\n"
 
-	trait_tec_dumb:0 "Irrational"
-	trait_tec_dumb_desc:0 "§LSome may call this species irrational or basically dumb, but they really show a total disregard for basic knowledge or rational thinking, making complex thought and discussion unnerving.§!\n"
+	trait_tec_negative_research:0 "Irrational"
+	trait_tec_negative_research_desc:0 "§LSome may call this species irrational or basically dumb, but they really show a total disregard for basic knowledge or rational thinking, making complex thought and discussion unnerving.§!\n"
 
 	trait_tec_bioservant_dumb:0 "Bio-Irrational"
 	trait_tec_bioservant_dumb_desc:0 "§L''Keep any bioservant far away from any non-drooling proof material.''§!\n"
@@ -403,11 +403,11 @@
 
 	trait_tec_technophile:0 "Technophiles"
 	trait_tec_technophile_desc:0 "§LThe need of technological process has driven these organics to consecrate their lives to the discovery of new ways of advance, with rational thinking and scientific ideas as their main.§!"
-	trait_tec_technophile_effect:0 "$tec_identity_trait$\n\nEach technophile pop will provide §G1§! $tec_loc_unity$ instantly after a research is completed.\nEach pop increase §Y£job_researcher£ Researcher Output§! on the planet by §G$@tec_technophile_boost_rate_tt$%§!, and §YResearcher Upkeep§! by §R$@tec_technophile_upkeep_rate_tt$%§!.\n\n§HEffect doubled for £job_livestock£ $job_livestock_plural$ pops§!"
+	trait_tec_technophile_effect:0 "$tec_identity_trait$\n\nEach pop increase §Y£job_researcher£ Researcher Output§! on the planet by §G$@tec_technophile_boost_rate_tt$%§!, and §YResearcher Upkeep§! by §R$@tec_technophile_upkeep_rate_tt$%§!.\nEach technophile pop will provide §G1§! $tec_loc_unity$ instantly after a research is completed.\n\n§HEffect doubled for £job_livestock£ $job_livestock_plural$ pops§!"
 
 	trait_tec_coactive:0 "Coactive"
 	trait_tec_coactive_desc:0 "§LWhen it comes to organization, development and unitary processes, this species shine like no other, using collaborative and effective ways to maximize the efficiency at any cost.§!"
-	trait_tec_coactive_effect:0 "$tec_identity_trait$\n\nEach coactive pop will produce §G0.5%§! more per $tec_loc_ascension_perk$ unlocked.\nEach pop increase §Y£unity£ Administrator Output§! on the planet by §G$@tec_coactive_boost_rate_tt$%§!, and §YAdministrator Upkeep§! by §R$@tec_coactive_upkeep_rate_tt$%§!.\n\n§HEffect doubled for £job_livestock£ $job_livestock_plural$ pops§!"
+	trait_tec_coactive_effect:0 "$tec_identity_trait$\n\nEach pop increase §Y£unity£ Administrator Output§! on the planet by §G$@tec_coactive_boost_rate_tt$%§!, and §YAdministrator Upkeep§! by §R$@tec_coactive_upkeep_rate_tt$%§!.\nEach coactive pop will produce §G0.5%§! more per $tec_loc_ascension_perk$ unlocked.\n\n§HEffect doubled for £job_livestock£ $job_livestock_plural$ pops§!"
 # /
 
 
@@ -719,7 +719,7 @@
 
 	trait_tec_gene_main_t2:0 "§YRecombined Genetics§! (§YII§!)"
 	trait_tec_gene_main_t2_desc:0 "§LThis species possess the basis for a perfectly tailored and maintained genetic code, which allows it to survive any circumstance, any injury or illness, as their bodies work at a incredible speed and effectivity at a cellular level, without mutations or somatic instability.§!"
-	trait_tec_gene_main_2_effect:0 "$trait_tec_gene_allows_recombined_traits$"
+	trait_tec_gene_main_t2_effect:0 "$trait_tec_gene_allows_recombined_traits$"
 
 	trait_tec_gene_main_t3:0 "§YGenetic Perfection§! (§HIII§!)"
 	trait_tec_gene_main_t3_desc:0 "§LThis species has a perfectly tailored and maintained genetic code, which allows it to survive any circumstance, any injury or illness, as their bodies work at a incredible speed and effectivity at a cellular level, without mutations or somatic instability.§!"
@@ -1239,20 +1239,32 @@
 	tec_unregulated_augmentation_deck:0 "§CUnregulated Augmentation§!"
 	tec_reclaimed_augmentation_deck:0 "§CReclaimed Augmentation§!"
 
+	tec_no_cybernetic_trait:0 "\n§R$trigger_tec_warning_red$Requires any degree of §YCybernetic§! Augmentation.§!"
+
+	tec_cybernetic_overcharge_cortex:0 "§CCyber-Overcharge§!\nThis trait increases its efficiency (§G10%§!) and upkeep (§R33%§!) paired with other Cortex Augmentations."
+	tec_cybernetic_overcharge_internal:0 "§CCyber-Overcharge§!\nThis trait increases its efficiency (§G10%§!) and upkeep (§R33%§!) paired with other Internal Augmentations."
+	tec_cybernetic_overcharge_external:0 "§CCyber-Overcharge§!\nThis trait increases its efficiency (§G10%§!) and upkeep (§R33%§!) paired with other External Augmentations."
+	tec_cybernetic_overcharge_deck:0 "§CCyber-Overcharge§!\nThis trait increases its efficiency (§G10%§!) and upkeep (§R33%§!) paired with other OS Deck Augmentations."
+
+	tec_only_1_cybernetic_mainframe_trait:0 "\n§R$trigger_tec_warning_red$Only §Y1§! Cybernetic Mainframes can be added to this species. Developing new cybernetic advancements can allow further modifications.§!"
 	tec_only_2_cybernetic_mainframe_trait:0 "\n§R$trigger_tec_warning_red$Only §Y2§! Cybernetic Mainframes can be added to this species. Developing new cybernetic advancements can allow further modifications.§!"
-	tec_only_4_cybernetic_mainframe_trait:0 "\n§R$trigger_tec_warning_red$This species has already augmented its body with all possible Cybernetic Mainframe.§!"
+	tec_only_3_cybernetic_mainframe_trait:0 "\n§R$trigger_tec_warning_red$This species has already augmented its body with all possible Cybernetic Mainframe.§!"
 
+	tec_only_1_cybernetic_cortex_trait:0 "\n§R$trigger_tec_warning_red$Only §Y1§! Cortex implants can be added to this species. Developing new cybernetic advancements can allow further modifications.§!"
 	tec_only_2_cybernetic_cortex_trait:0 "\n§R$trigger_tec_warning_red$Only §Y2§! Cortex implants can be added to this species. Developing new cybernetic advancements can allow further modifications.§!"
-	tec_only_4_cybernetic_cortex_trait:0 "\n§R$trigger_tec_warning_red$This species has already cybernetically replaced most of its brain with Cortex implants.§!"
+	tec_only_3_cybernetic_cortex_trait:0 "\n§R$trigger_tec_warning_red$This species has already cybernetically replaced most of its brain with Cortex implants.§!"
 
+	tec_only_1_cybernetic_internal_trait:0 "\n§R$trigger_tec_warning_red$Only §Y1§! Internal implants can be added to this species. Developing new cybernetic advancements can allow further modifications."
 	tec_only_2_cybernetic_internal_trait:0 "\n§R$trigger_tec_warning_red$Only §Y2§! Internal implants can be added to this species. Developing new cybernetic advancements can allow further modifications."
-	tec_only_4_cybernetic_internal_trait:0 "\n§R$trigger_tec_warning_red$This species has already cybernetically augmented its body with Internal implants.§!"
+	tec_only_3_cybernetic_internal_trait:0 "\n§R$trigger_tec_warning_red$This species has already cybernetically augmented its body with Internal implants.§!"
 
+	tec_only_1_cybernetic_external_trait:0 "\n§R$trigger_tec_warning_red$Only §Y1§! External implants can be added to this species. Developing new cybernetic advancements can allow further modifications.§!"
 	tec_only_2_cybernetic_external_trait:0 "\n§R$trigger_tec_warning_red$Only §Y2§! External implants can be added to this species. Developing new cybernetic advancements can allow further modifications.§!"
-	tec_only_4_cybernetic_external_trait:0 "\n§R$trigger_tec_warning_red$This species has already cybernetically augmented its body with External implants.§!"
+	tec_only_3_cybernetic_external_trait:0 "\n§R$trigger_tec_warning_red$This species has already cybernetically augmented its body with External implants.§!"
 
+	tec_only_1_cybernetic_deck_trait:0 "\n§R$trigger_tec_warning_red$Only §Y1§! Operating System Decks can be added to this species. Developing new cybernetic advancements can allow further modifications.§!"
 	tec_only_2_cybernetic_deck_trait:0 "\n§R$trigger_tec_warning_red$Only §Y2§! Operating System Decks can be added to this species. Developing new cybernetic advancements can allow further modifications.§!"
-	tec_only_4_cybernetic_deck_trait:0 "\n§R$trigger_tec_warning_red$This species has already cybernetically augmented its personality with Operating System Decks.§!"
+	tec_only_3_cybernetic_deck_trait:0 "\n§R$trigger_tec_warning_red$This species has already cybernetically augmented its personality with Operating System Decks.§!"
  # /
  # --------------- Mainframe Endoskeletal implants
 	# Tier 1
