feat: distributism and corporate symbiotism tradition swaps

--- a/localisation/english/replace/zzzz_evolved_traditions_replace_l_english.yml
+++ b/localisation/english/replace/zzzz_evolved_traditions_replace_l_english.yml
@@ -50,13 +50,27 @@
 	tr_mercantile_trickle_up_economics_gestalt_desc:0 "$mod_planet_maintenancedrones_trade_value_produces_add$: §G+2§!"
 	tr_mercantile_trickle_up_economics_gestalt_delayed:0 "Chains of interlinked semi-emotional emulator modules on our menial drones will surely increase our margin of benefit."
 
+
+	tr_mercantile_trickle_up_economics_entrepreneur:0 "Laissez-Faire Doctrine"
+	tr_mercantile_trickle_up_economics_entrepreneur_desc: "Base Production and $mod_tec_hired_job_base_upkeep_mult$: §G+25%§!\n$mod_tec_hired_job_trade_add$: §G+0.5§!"
+
+	tr_mercantile_trickle_up_economics_entrepreneur_delayed:0 "Unshackle the invisible hand, and watch as it guides us towards unparalleled economic growth."
+
+	tr_mercantile_commercial_enterprise_desc:1 "$tec_loc_amenities$ from $job_trader_plural_with_icon$: §G+2§!\n\n['concept_tec_trade_buildings_icon'] provide additional ['concept_tec_specialist_job_trader_plural_icon'] Jobs\n\nThis also affects all §Y£district£ Trade Districts§! such as:\n$t$- Shattered Ringworld ['district:district_srw_commercial']\n$t$- Ecumenopolis ['district:district_tec_arcology_trade']\n$t$- Elysium ['district:district_tec_elysium_arcology_commercial']\n$t$- Ringworld ['district:district_tec_rw_trade']\n$t$- Sidereal Habitat ['district:district_tec_hab_arcology_trade']"
+
 	tr_mercantile_commercial_enterprise_gestalt:0 "Supplementary Trading Processing"
-	tr_mercantile_commercial_enterprise_gestalt_tooltip:0 "£building£ §Y$building_tec_trade_machine_1$§! and §Y$building_tec_trade_machine_stonks$§! buildings provide §Y1§! extra £job_tec_trade_drone£ §Y$job_tec_trade_drone$ Job§! per level.\nHabitat §Y$district_hab_commercial_plural$§! and §Y$district_tec_hab_arcology_trade_plural$§!, Ring World §Y$district_tec_rw_trade_plural$§! and Ecumenopolis §Y$district_tec_arcology_trade_plural$§! also provide additional £job_tec_trade_drone£ §Y$job_tec_trade_drone$ Jobs§!."
+	tr_mercantile_commercial_enterprise_gestalt_tooltip:0 "['concept_tec_trade_buildings_icon'] provide additional ['concept_tec_specialist_job_tec_trade_drone_plural_icon'] Jobs\n\nThis also affects all §Y£district£ Trade Districts§! such as:\n$t$- Shattered Ringworld ['district:district_srw_commercial']\n$t$- Ecumenopolis ['district:district_tec_arcology_trade']\n$t$- Elysium ['district:district_tec_elysium_arcology_commercial']\n$t$- Ringworld ['district:district_tec_rw_trade']\n$t$- Sidereal Habitat ['district:district_tec_hab_arcology_trade']"
 	tr_mercantile_commercial_enterprise_gestalt_delayed:0 "Higher initial investments will convey into higher gains for our collective."
 
-	tr_mercantile_commercial_enterprise_desc:1 "$tec_loc_amenities$ from §Y$job_trader_plural_with_icon$§!: §G+2§!\n§Y£building£ Commercial Buildings§! and §Y£district£ Trade-focused Districts§! also provide additional §Y$job_trader_with_icon$§! Jobs."
+	tr_mercantile_commercial_enterprise_entrepreneur_corpo: "Boardroom Diplomacy"
+	tr_mercantile_commercial_enterprise_entrepreneur_corpo_delayed: "In the corridors of power, corporate logos shine as bright as government seals."
+	tr_mercantile_commercial_enterprise_entrepreneur_corpo_desc:0 "['concept_tec_ethic_building_entrepreneur'] now provide extra ['concept_tec_hired_jobs'] depending on $tec_loc_capital_tier$\n\nTotal §Y$tec_loc_jobs$§! at Capital Tier:\n$t$- Tier 1 (Colony): §Y2§!\n$t$- Tier 2 (Capital) & Tier 3 (Major): §Y3§!\n$t$- Tier 4 (System) & Tier 5 (Galactic): §Y4§!\n$t$- Tier 6 (Imperial): §Y5§!"
 
-	tr_mercantile_finish_desc:4 "$MOD_TRADE_VALUE_MULT$: §G+10%§!.\nAscension Perks Unlocked: §G+1§!\n\n§EThe Tier II tradition tree §YArtifice§! will be available.§!\n"
+	tr_mercantile_commercial_enterprise_entrepreneur_distributism: "Grassroots Economy"
+	tr_mercantile_commercial_enterprise_entrepreneur_distributism_delayed: "A galaxy of small proprietors, each contributing their unique spark, ignites an economic revolution from the ground up."
+	tr_mercantile_commercial_enterprise_entrepreneur_distributism_desc:0 "['concept_tec_trade_buildings_icon'] provide additional ['concept_tec_hired_jobs'], depending on §Y$tec_loc_designation$§!\n\nThis also affects all §Y£district£ Trade Districts§! such as:\n$t$- Shattered Ringworld ['district:district_srw_commercial']\n$t$- Ecumenopolis ['district:district_tec_arcology_trade']\n$t$- Elysium ['district:district_tec_elysium_arcology_commercial']\n$t$- Ringworld ['district:district_tec_rw_trade']\n$t$- Sidereal Habitat ['district:district_tec_hab_arcology_trade']"
+
+	tr_mercantile_finish_desc:4 "$MOD_TRADE_VALUE_MULT$: §G+10%§!\nAscension Perks Unlocked: §G+1§!\n\n§EThe Tier II tradition tree §YArtifice§! will be available.§!\n"
 	tr_mercantile_federations_finish_desc:0 "$MOD_TRADE_VALUE_MULT$: §G+10%§!\nGrants access to the §Y$trade_federation$§! Federation type.\nAscension Perks Unlocked: §G+1§!\n\n§EThe Tier II tradition tree §YArtifice§! will be available.§!\n"
 
 # ------------------------------------------------- Prosperity
