--- a/localisation/english/zz_evolved_concepts_l_english.yml
+++ b/localisation/english/zz_evolved_concepts_l_english.yml
@@ -1008,7 +1008,7 @@
 	concept_tec_specialist_job_tec_ai_ordinator_icon: "£job_tec_ai_ordinator£ $job_tec_ai_ordinator$"
 	concept_tec_specialist_job_tec_ai_ordinator_plural: "$job_tec_ai_ordinator_plural$"
 	concept_tec_specialist_job_tec_ai_ordinator_plural_icon: "£job_tec_ai_ordinator£ $job_tec_ai_ordinator_plural$"
-	concept_tec_specialist_job_tec_ai_ordinator_desc: "§L$job_tec_ai_ordinator_desc$§!\n\n$job_tec_ai_ordinator_effect_desc$\n\n$tec_loc_c_stratum$: §Y$tec_loc_pop_cat_specialist$§!\n$tec_loc_c_eco_cat$: ['concept_tec_eco_planet_administrators_alias_icon']\n\n$tec_loc_edict_funds$: §G+2§!\n$tec_loc_c_produces$: §Y£unity£ 3 £sr_tec_ai_power£ 3!\n$tec_loc_c_upkeep$: §Y£trigger_tec_research£ 1§!"
+	concept_tec_specialist_job_tec_ai_ordinator_desc: "§L$job_tec_ai_ordinator_desc$§!\n\n$job_tec_ai_ordinator_effect_desc$\n\n$tec_loc_c_stratum$: §Y$tec_loc_pop_cat_specialist$§!\n$tec_loc_c_eco_cat$: ['concept_tec_eco_planet_administrators_alias_icon']\n\n$tec_loc_edict_funds$: §G+2§!\n$tec_loc_c_produces$: §Y£unity£ 3 £sr_tec_ai_power£ 3§!\n$tec_loc_c_upkeep$: §Y£trigger_tec_research£ 1§!"
 
 	concept_tec_specialist_job_tec_ai_ordinator_megacorp: "$job_tec_ai_ordinator$"
 	concept_tec_specialist_job_tec_ai_ordinator_megacorp_icon: "£job_tec_ai_ordinator£ $job_tec_ai_ordinator$"
