feat: loc and concept improvements for some civics, fixed machine world unity districts, improvements for hoarders

--- a/localisation/english/zz_evolved_events_lore_l_english.yml
+++ b/localisation/english/zz_evolved_events_lore_l_english.yml
@@ -902,6 +902,8 @@ tec_origin.122.a.tooltip:0 "The location of a suitable system is revealed, colon
  tec_hoarders.1.title: "Vault of Plenty"
  tec_hoarders.1.desc: "Currently the vault stockpiles the following resources:\n[tec_empty_stockpile_loc][tec_minerals_stockpile_loc][tec_food_stockpile_loc][tec_alloys_stockpile_loc][tec_consumer_goods_stockpile_loc][tec_rare_crystals_stockpile_loc][tec_exotic_gases_stockpile_loc][tec_volatile_motes_stockpile_loc][tec_minor_artifacts_stockpile_loc]"
 
+ tec_hoarders.1.deposit: "Deposit All Resources"
+ tec_hoarders.1.deposit.tooltip: "Deposits all resources with §Gpositive§! income."
  tec_hoarders.1.minerals: "Manage $tec_loc_minerals$"
  tec_hoarders.1.food: "Manage $tec_loc_food$"
  tec_hoarders.1.alloys: "Manage $tec_loc_alloys$"
