--- a/localisation/english/replace/zz_evolved_buildings_and_jobs_l_english.yml
+++ b/localisation/english/replace/zz_evolved_buildings_and_jobs_l_english.yml
@@ -56,6 +56,7 @@ l_english:
 	building_tec_amenity_building_tag: "['concept_tec_amenity_building']"
 	building_tec_healthcare_building_tag: "['concept_tec_healthcare_building']"
 	building_tec_fortress_building_tag: "['concept_tec_fortress_building']"
+	building_tec_monument_building_tag: "['concept_tec_monument_building']"
 	building_tec_naval_building_tag: "['concept_tec_naval_building']"
 	building_tec_trade_building_tag: "['concept_tec_trade_building']"
 	building_tec_silo_building_tag: "['concept_tec_silo_building']"
@@ -1894,7 +1895,7 @@ l_english:
 	building_tec_vault_of_acquisition_desc: "A section of the Vault of Plenty dedicated to reinvestment and smart utilization of resources for the purpose of creating more material wealth."
 	building_tec_vault_of_acquisition_effect_desc: "\nThis £building£ §YBuilding§! generates a trickle of resources depending on the stockiple of resources present in the Vault of Plenty"
 
-	building_tec_vault_of_unity: "Vault of Unity"
+	building_tec_vault_of_unity: "Vault of Opulence"
 	building_tec_vault_of_unity_desc: "A grandiose section of the Vault of Plenty that houses a treasure trove of opulent artifacts, ranging from rare works of art to intricate musical instruments and other expressions of cultural wealth. It is a testament to the lavish tastes and indulgences of its builders, who have spared no expense in gathering and preserving the finest and most exquisite examples of their civilization's cultural heritage."
 	building_tec_vault_of_unity_effect_desc: "\nThis £building£ §YBuilding§! generates §Y$tec_loc_unity$§! depending on the stockiple of resources present in the Vault of Plenty"
 
