--- a/localisation/english/zz_evolved_concepts_l_english.yml
+++ b/localisation/english/zz_evolved_concepts_l_english.yml
@@ -278,6 +278,12 @@
 	concept_tec_leader_buildings_icon: "£leader£ Leader Buildings"
 	concept_tec_leader_building_desc: "Leader Buildings are §Y£building£ Buildings§! that increase §Y$MOD_COUNTRY_LEADER_CAP_ADD$§! Jobs and provides £pop_cat_ruler£ Ruler Jobs (or equivalent for Gestalts).\n\n$concept_tec_leader_building$ ($tec_loc_leader_scientist$):\n$t$- ['building:building_institute']\n$t$- ['building:building_supercomputer']\n$t$- ['building:building_tec_biohive_supercomputer']\n$concept_tec_leader_building$ ($tec_loc_leader_official$):\n$t$- ['building:building_autocurating_vault']\n$t$- ['building:building_citadel_of_faith']\n$t$- ['building:building_corporate_vault']\n$t$- ['building:building_tec_hive_unity_vault']\n$t$- ['building:building_tec_cyberhive_unity_vault']\n$t$- ['building:building_tec_biohive_unity_vault']\n$t$- ['building:building_alpha_hub']\n$concept_tec_leader_building$ ($tec_loc_leader_commander$):\n$t$- ['building:building_military_academy']\n$t$- ['building:building_tec_gestalt_military_academy']\n$t$- ['building:building_tec_biohive_military_academy']\n$concept_tec_leader_building$ (Other):\n$t$-['building:building_tec_planetary_node_center']\n$t$-['building:building_tec_epigenetic_chambers']"
 	
+	concept_tec_monument_building: "Monument Building"
+	concept_tec_monument_building_icon: "£job_culture_worker£ Monument Building"
+	concept_tec_monument_buildings: "Monument Buildings"
+	concept_tec_monument_buildings_icon: "£job_culture_worker£ Monument Buildings"
+	concept_tec_monument_building_desc: "Monument Buildings are §Y$tec_loc_planet$§! unique §Y£building£ Buildings§! that give §Y$tec_loc_unity$§! Jobs such as ['concept_tec_specialist_job_culture_worker_plural_icon'], ['concept_tec_specialist_job_evaluator_plural_icon'] and produce §Y$tec_loc_unity$§! depending on the number of §Y$tec_loc_ascension_perks$§! acquired.\n\n$concept_tec_monument_building$:\n$t$- ['building:building_autochthon_monument']\n$t$- ['building:building_corporate_monument']\n$t$- ['building:building_sensorium_1']\n$t$- ['building:building_tec_biohive_relay_1']\n$t$- ['building:building_tec_cyberhive_relay_1']\n$t$- ['building:building_simulation_1']\n$concept_tec_monument_building$ (Other):\n$t$- ['building:building_galactic_memorial_1']"
+	
 	concept_tec_unity_building: "Administrative Building"
 	concept_tec_unity_building_icon: "£unity£ Administrative Building"
 	concept_tec_unity_buildings: "Administrative Buildings"
@@ -295,14 +301,14 @@
 	concept_tec_research_building_icon: "£research£ Research Building"
 	concept_tec_research_buildings: "Research Buildings"
 	concept_tec_research_buildings_icon: "£research£ Research Buildings"
-	concept_tec_research_building_desc: "Research Buildings are §Y£building£ Buildings§! that give §Y$tec_loc_research$§! Jobs such as ['concept_tec_specialist_job_researcher_plural_icon'], ['concept_tec_specialist_job_calculator_plural_icon'] or ['concept_tec_specialist_job_brain_drone_plural_icon'].\n\n$concept_tec_research_building$:\n$t$- ['building:building_research_lab_1']\n$t$- ['building:building_tec_biohive_research_lab_1']\n$t$- ['building:building_fe_lab_1']$concept_tec_research_building$ (Other):\n$t$- ['building:building_nanolab_1']\n$t$- ['building:building_astral_siphon_1']\n$t$- ['building:building_tec_curator_archive_1']\n$t$- ['building:building_tec_occultist_lodge_1']\n$t$- ['building:building_tec_evolutionary_lab_1']"
+	concept_tec_research_building_desc: "Research Buildings are §Y£building£ Buildings§! that give §Y$tec_loc_research$§! Jobs such as ['concept_tec_specialist_job_researcher_plural_icon'], ['concept_tec_specialist_job_calculator_plural_icon'] or ['concept_tec_specialist_job_brain_drone_plural_icon'].\n\n$concept_tec_research_building$:\n$t$- ['building:building_research_lab_1']\n$t$- ['building:building_tec_biohive_research_lab_1']\n$t$- ['building:building_fe_lab_1']\n$concept_tec_research_building$ (Other):\n$t$- ['building:building_nanolab_1']\n$t$- ['building:building_astral_siphon_1']\n$t$- ['building:building_tec_curator_archive_1']\n$t$- ['building:building_tec_occultist_lodge_1']\n$t$- ['building:building_tec_evolutionary_lab_1']"
 
 
 	concept_tec_amenity_building: "Amenity Building"
 	concept_tec_amenity_building_icon: "£amenities£ Amenity Building"
 	concept_tec_amenity_buildings: "Amenity Buildings"
 	concept_tec_amenity_buildings_icon: "£amenities£ Amenity Buildings"
-	concept_tec_amenity_building_desc: "Amenity Buildings are §Y£building£ Buildings§! that give §Y$tec_loc_amenities$§! Jobs such as ['concept_tec_specialist_job_entertainer_plural_icon'] or ['concept_tec_specialist_job_tec_spareparts_drone_plural_icon'].\n\n$concept_tec_amenity_building$:\n$t$- ['building:building_holo_theatres']\n$t$- ['building:building_tec_gestalt_parts_1']"
+	concept_tec_amenity_building_desc: "Amenity Buildings are §Y£building£ Buildings§! that give §Y$tec_loc_amenities$§! Jobs such as ['concept_tec_specialist_job_entertainer_plural_icon'] or ['concept_tec_specialist_job_tec_spareparts_drone_plural_icon'].\n\n$concept_tec_amenity_building$:\n$t$- ['building:building_holo_theatres']\n$t$- ['building:building_tec_gestalt_parts_1']\n$t$- ['building:building_fe_entertainment_1']"
 
 
 	concept_tec_healthcare_building: "Healthcare Building"
@@ -315,25 +321,25 @@
 	concept_tec_fortress_building_icon: "£job_soldier£ Fortress Building"
 	concept_tec_fortress_buildings: "Fortress Buildings"
 	concept_tec_fortress_buildings_icon: "£job_soldier£ Fortress Buildings"
-	concept_tec_fortress_building_desc: "Fortress Buildings are §Y£building£ Buildings§! that give ['concept_tec_worker_job_soldier_icon'] or ['concept_tec_worker_job_warrior_drone_icon'] Jobs.\n\n$concept_tec_fortress_building$:\n$t$- ['building:building_stronghold']\n$t$- ['building:building_tec_dread_stronghold']\n$t$- ['building:building_tec_biohive_stronghold']"
+	concept_tec_fortress_building_desc: "Fortress Buildings are §Y£building£ Buildings§! that give ['concept_tec_worker_job_soldier_icon'] or ['concept_tec_worker_job_warrior_drone_icon'] Jobs.\n\n$concept_tec_fortress_building$:\n$t$- ['building:building_stronghold']\n$t$- ['building:building_tec_dread_stronghold']\n$t$- ['building:building_tec_biohive_stronghold']\n$t$- ['building:building_fe_fortress']"
 
 	concept_tec_naval_building: "Naval Building"
 	concept_tec_naval_building_icon: "£job_tec_naval_operator£ Naval Building"
 	concept_tec_naval_buildings: "Naval Buildings"
 	concept_tec_naval_buildings_icon: "£job_tec_naval_operator£ Naval Buildings"
-	concept_tec_naval_building_desc: "Naval Buildings are §Y£building£ Buildings§! that give ['concept_tec_specialist_job_tec_naval_operator_icon'] or ['concept_tec_specialist_job_tec_naval_operator_drone_icon'] Jobs.\n\n$concept_tec_naval_building$:\n$t$- ['building:building_stronghold']\n$t$- ['building:building_tec_dread_stronghold']\n$t$- ['building:building_tec_biohive_stronghold']"
+	concept_tec_naval_building_desc: "Naval Buildings are §Y£building£ Buildings§! that give ['concept_tec_specialist_job_tec_naval_operator_icon'] or ['concept_tec_specialist_job_tec_naval_operator_drone_icon'] Jobs.\n\n$concept_tec_naval_building$:\n$t$- ['building:building_tec_naval_academy_1']\n$t$- ['building:building_tec_naval_gestalt_1']\n$t$- ['building:building_tec_naval_biohive_1']"
 
 	concept_tec_trade_building: "Trade Building"
 	concept_tec_trade_building_icon: "£trade_value£ Trade Building"
 	concept_tec_trade_buildings: "Trade Buildings"
 	concept_tec_trade_buildings_icon: "£trade_value£ Trade Buildings"
-	concept_tec_trade_building_desc: "Trade Buildings are §Y£building£ Buildings§! that give ['concept_tec_worker_job_clerk_icon'], ['concept_tec_specialist_job_trader_icon'] or ['concept_tec_specialist_job_tec_trade_drone_icon'] Jobs.\n\n$concept_tec_trade_building$ (Regular):\n$t$- ['building:building_commercial_zone']\n$t$- ['building:building_tec_commercial_flagship']\n$t$- ['building:building_galactic_stock_exchange']\n$concept_tec_trade_building$ (Trade Machines):\n$t$- ['building:building_tec_trade_machine_1']\n$t$- ['building:building_tec_trade_machine_stonks']"
+	concept_tec_trade_building_desc: "Trade Buildings are §Y£building£ Buildings§! that give ['concept_tec_worker_job_clerk_icon'], ['concept_tec_specialist_job_trader_icon'] or ['concept_tec_specialist_job_tec_trade_drone_icon'] Jobs.\n\n$concept_tec_trade_building$ (Regular):\n$t$- ['building:building_commercial_zone']\n$t$- ['building:building_tec_commercial_flagship']\n$t$- ['building:building_galactic_stock_exchange']\n$t$- ['building:building_fe_market_1']\n$concept_tec_trade_building$ (Trade Machines):\n$t$- ['building:building_tec_trade_machine_1']\n$t$- ['building:building_tec_trade_machine_stonks']"
 
 	concept_tec_silo_building: "Silo Building"
 	concept_tec_silo_building_icon: "£mod_country_resource_max_add£ Silo Building"
 	concept_tec_silo_buildings: "Silo Buildings"
 	concept_tec_silo_buildings_icon: "£mod_country_resource_max_add£ Silo Buildings"
-	concept_tec_silo_building_desc: "Silo Buildings are §Y£building£ Buildings§! that give §Y£mod_country_resource_max_add£ $MOD_COUNTRY_RESOURCE_MAX_ADD$§!.\n\n$concept_tec_silo_building$:\n$t$- ['building:building_resource_silo']\n$t$- ['building:building_tec_biohive_resource_silo_1']"
+	concept_tec_silo_building_desc: "Silo Buildings are §Y£building£ Buildings§! that give §Y£mod_country_resource_max_add£ $MOD_COUNTRY_RESOURCE_MAX_ADD$§!.\n\n$concept_tec_silo_building$:\n$t$- ['building:building_resource_silo']\n$t$- ['building:building_tec_biohive_resource_silo_1']\n$t$- ['building:building_fe_silo_1']"
 
 	#concept_tec_leader_civic: "Leader Civic"
 	#concept_tec_leader_civics: "Leader Civics"
