--- a/localisation/english/zz_evolved_events_lore_l_english.yml
+++ b/localisation/english/zz_evolved_events_lore_l_english.yml
@@ -1085,7 +1085,7 @@ tec_aiauth.20.name: "Councilor AI Node Fragmentation"
 tec_aiauth.20.desc: "The nascent councilor AI Node is presented in front of the council, will it be up to the standards of both the People of §Y[This.GetName]§! and our §Y[This.GetRulerTitle]§!?"
 
 tec_aiauth.21.name: "Planetary AI Node Fragmentation"
-tec_aiauth.21.desc: "$tec_aiauth.20.desc$"
+tec_aiauth.21.desc: "The nascent planetary AI Node of planet [event_target:tec_aiauth_planetary_governing_node_planet.GetName] is presented in front of the council, will it be up to the standards of both the People of §Y[This.GetName]§! and our §Y[This.GetRulerTitle]§!?"
 
 tec_aiauth.22.name: "$tec_aiauth_ruler$ Re-Fragmentation"
 tec_aiauth.22.desc: "The §Y[This.GetRulerTitle]§! is in the process of re-fragmenting itself, to align better with the ethical needs of the empire, but also to fulfill the tasks presented in front of it better, but will it be up to the standards of both the People of §Y[This.GetName]§!?"
